# BetterCode

./: pyproject.toml
bettercode/: pyproject.toml
bettercode/bettercode/: bad_looping.py  bad_looping_fix.py
bettercode/bettercode/tree_compare/: tree_compare.py  tree_compare_tests.py
bettercode/tests/: test_bettercode.py
