[tool.poetry]
name = "bettercode"
version = "0.1.0"
description = ""
authors = ["Shaun Patterson <shaunpatterson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
